apps/site/styles/globals.css
html,
body,
.App,
#root,
#__next {
  background-color: #fbe8d3;
  height: 100%;
  margin: 0;
  overflow: hidden;
}

.split {
  display: flex;
  flex-direction: row;
}

.gutter {
  border-left: 1px solid rgba(0, 0, 0, 0.12);
}

.gutter:hover {
  cursor: col-resize;
  border-left: 3px solid rgba(0, 0, 0, 0.12);
}

.NavbarIcon {
  font-size: 1.4rem;
}

.clickable {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: inherit;
}

.link:hover {
  text-decoration: underline;
  cursor: pointer;
}

.container {
  max-width: 1400px !important;
  margin: auto !important;
  padding-left: 5vw;
  padding-right: 5vw;
}

.arrows path {
  stroke: #f85f73;
  fill: transparent;
  stroke-width: 1px;
  animation: arrow 2s infinite;
  -webkit-animation: arrow 2s infinite;
}

@keyframes arrow {
  0% {
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  80% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes arrow /*Safari and Chrome*/ {
  0% {
    opacity: 0;
  }
  40% {
    opacity: 1;
  }
  80% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

.arrows path.a1 {
  animation-delay: -1s;
  -webkit-animation-delay: -1s; /* Safari Chrome */
}

.arrows path.a2 {
  animation-delay: -0.5s;
  -webkit-animation-delay: -0.5s; /* Safari Chrome */
}

.arrows path.a3 {
  animation-delay: 0s;
  -webkit-animation-delay: 0s; /* Safari Chrome */
}

